--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "motion": "^12.23.24",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.10",
     "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -31,6 +32,7 @@
     "@eslint/js": "^9.38.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
