--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
+    "react-responsive": "^10.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
