--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint:fix": "eslint . --ext .js,.ts,.jsx,.tsx --fix"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.39",
+    "@ai-sdk/react": "^2.0.97",
     "@prisma/client": "^6.19.0",
     "@tanstack/react-query": "^5.90.9",
+    "ai": "^5.0.97",
     "better-auth": "^1.3.32",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,7 +32,8 @@
     "react-hook-form": "^7.65.0",
     "react-responsive": "^10.0.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
