--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "react-responsive": "^10.0.1",
+    "react-syntax-highlighter": "^16.1.0",
+    "react-syntax-highlighter-virtualized-renderer": "^1.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
@@ -42,6 +44,7 @@
     "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "eslint-config-prettier": "^10.1.8",
