--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "typeRoots": ["./types", "./node_modules/@types"],
     "target": "ES2017",
     "lib": [
       "dom",
@@ -40,5 +41,6 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+
 }
