--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/google": "^2.0.39",
     "@ai-sdk/react": "^2.0.97",
     "@prisma/client": "^6.19.0",
+    "@react-spring/web": "^10.0.3",
     "@tanstack/react-query": "^5.90.9",
     "ai": "^5.0.97",
     "better-auth": "^1.3.32",
@@ -33,6 +34,7 @@
     "react-responsive": "^10.0.1",
     "react-syntax-highlighter": "^16.1.0",
     "react-syntax-highlighter-virtualized-renderer": "^1.1.0",
+    "recharts": "^3.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
