--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.65.0",
+    "react-markdown": "^10.1.0",
     "react-responsive": "^10.0.1",
     "react-syntax-highlighter": "^16.1.0",
     "react-syntax-highlighter-virtualized-renderer": "^1.1.0",
