--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
     "ogl": "^1.0.11",
+    "razorpay": "^2.9.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.65.0",
