--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prettier": "^3.6.2",
     "prisma": "^6.19.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "typescript-eslint": "^8.46.2"
