--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
     "**/*.mts",
     ".next\\dev/types/**/*.ts",
     ".next\\dev/types/**/*.ts"
-  ],
+, "src/lib/server/razorpayactions"  ],
   "exclude": [
     "node_modules"
   ],
